<resources>
    <string name="app_name">Quedate en casa</string>
    <string name="facebook_app_id">1062726510762982</string>
    <string name="fb_login_protocol_scheme">fb1062726510762982</string>
    <string name="google_client_id">551888092753-arm3r0140gf597a0j9km6cpat9cpn6qh.apps.googleusercontent.com</string>
    <string name="google_client_secret">4hfSOVQrzC_RE5XFqXUFrOW8</string>

    <string name="message_doble_press_back">Presione 2 veces para salir de la aplicación</string>
    <string name="home_text_content">Siempre hemos logrado salir adelante en cualquier situación. Ahora lo lograremos, <b>quedándonos en casa</b>. Ayúdanos a recolectar datos para evitar el contagio de Coronavirus en Guatemala.</string>
    <string name="register_title">Regístrate con</string>
    <string name="conditions_and_terms">términos y condiciones</string>
    <string name="accept_terms">Acepto los</string>
    <string name="create_and_support">Crea tu cuenta y apoya</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_emergency">Emergencia</string>
    <string name="title_help">Ayuda</string>
    <string name="title_emergency_numbers">Números de emergencia</string>

    <string name="stat_title">Stat title</string>
    <string name="stat_qty">9999</string>

    <string name="usage_form">Forma de uso</string>
    <string name="text_tips">Consejos de prevención</string>

    <string name="loading">Cargando</string>

    <string name="title_emergency_number_gt">Emergencia Coronavirus</string>
    <string name="emergency_number_gt">1510</string>
    <string name="emergency_number_gt_2">1540</string>
    <string name="title_emergency_number_cbm_gt">Bomberos Municipales</string>
    <string name="emergency_number_cbm_gt">123</string>
    <string name="title_emergency_number_cvb_gt">Bomberos Voluntarios</string>
    <string name="emergency_number_cvb_gt">122</string>
    <string name="title_emergency_number_pnc_gt">Policia Nacional Civil</string>
    <string name="emergency_number_pnc_gt">110</string>
    <string name="call_button">Llamar a emergencia</string>
    <string name="img_logo_emergency">Imagen de institución de emergencia</string>
    <string name="call_permission_request">Debes aceptar el permiso para poder realizar la llamada</string>

    <string name="onboarding_continue">Continuar</string>
    <string name="onboarding_end">Finalizar</string>
    <string name="onboarding1_title">Con tu ubicación, podemos detectar posibles infectados y áreas de riesgo.</string>
    <string name="onboarding1_subtitle">Así prevenimos la expansión del virus y podríamos ayudar a detectar posibles casos.</string>
    <string name="onboarding2_title"></string>
    <string name="onboarding2_subtitle">Podemos evitar que el virus se propague, solo con saber en dónde has estado, así identificaremos áreas vulnerables.</string>
    <string name="onboarding3_title">¿Has estado fuera de Guate?</string>
    <string name="onboarding3_subtitle">Ayúdanos con todos los detalles de tus ubicaciones, es esencial.</string>
    <string name="onboarding4_title">Tu participación es voluntaria</string>
    <string name="onboarding4_subtitle">Solamente se mostrarán las áreas de riesgo, nunca tu ubicación.</string>
    <string name="complete_profile">Completa tu perfil</string>
    <string name="save">Guardar</string>
    <string name="ill_do_later">Lo haré más tarde</string>
    <string name="gender">Género</string>
    <string-array name="genders">
        <item name="male">Masculino</item>
        <item name="female">Femenino</item>
    </string-array>
    <string name="born_date">Fecha de nacimiento</string>
    <string name="positive_option">Aceptar</string>
    <string name="cancel_option">Cancelar</string>
    <string name="verify_user_data">Por favor completa los campos necesarios para completar tu perfil</string>

    <string name="title_recomendations">Recomendaciones</string>
    <string name="title_communications">Comunicados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

