<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gt.quedateencasa.views.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_emergency_numbers" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.gt.quedateencasa.views.main.ui.emergencyNumbers.EmergencyNumbersFragment"
        android:label="@string/title_emergency"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.gt.quedateencasa.views.main.ui.emergencyNumbers.EmergencyNumbersFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_notifications" />
</navigation>
