<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/layout_popup"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xxl_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/textview_complete_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:text="@string/complete_profile"></TextView>
        <TextView
            android:id="@+id/gender_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/lg_margin"
            android:layout_marginLeft="@dimen/sm_margin"
            android:layout_marginRight="@dimen/sm_margin"
            android:padding="@dimen/lg_margin"
            android:textColor="@color/textColor"
            android:hint="@string/gender"
            android:gravity="left|center_vertical"
            android:background="@drawable/outlined_background"
            ></TextView>

        <TextView
            android:id="@+id/born_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/sm_margin"
            android:layout_marginRight="@dimen/sm_margin"
            android:background="@drawable/outlined_background"
            android:gravity="left|center_vertical"
            android:padding="@dimen/lg_margin"
            android:textColor="@color/textColor"
            android:hint="@string/born_date"></TextView>
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/md_margin"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorLightBlue"
            android:textColor="@color/colorWhite"
            android:text="@string/save"></Button>
        <TextView
            android:id="@+id/textview_later"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/lg_margin"
            android:textAllCaps="true"
            android:gravity="center"
            android:text="@string/ill_do_later"></TextView>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:background="@color/colorWhite">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></ProgressBar>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>