<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_margin"
        android:layout_marginBottom="@dimen/xl_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider">
        <ImageView
            android:id="@+id/logo_splash"
            android:layout_width="@dimen/login_icon_width"
            android:layout_height="@dimen/login_icon_height"
            android:contentDescription="@string/app_name"
            android:transitionName="logoTransition"
            app:srcCompat="@drawable/es_logo_ow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:targetApi="lollipop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xxl_margin"
        android:layout_marginRight="@dimen/xxl_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_container"
        app:layout_constraintBottom_toTopOf="@id/home_content">
        <View
            android:id="@+id/sign_in_left_divider"
            android:layout_width="120dp"
            android:layout_height="4dp"
            android:background="@color/colorLightBlue"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/sign_in_right_divider"
            android:layout_width="120dp"
            android:layout_height="4dp"
            android:background="@color/colorLightBlue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/xxl_margin"
        android:layout_marginLeft="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/home_text_content"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/xxl_margin"
            android:layout_marginRight="@dimen/xxl_margin"
            android:layout_marginTop="@dimen/xxxl_margin"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/home_text_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxl_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/sign_in_buttons"
                ></TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_buttons"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/xl_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_title"
                app:layout_constraintBottom_toTopOf="@id/check_conditions_and_terms">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_google_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/login_fb_button"/>
                <FrameLayout
                    android:layout_below="@+id/no_network_bar"
                    android:id="@+id/FrameLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <Button
                        android:background="#3B5998"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/fb"
                        android:onClick="onClickFacebookButton"
                        android:textAllCaps="false"
                        android:text="Sign up with Facebook"
                        android:textSize="22sp"
                        android:textColor="#ffffff" />
                </FrameLayout>
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_fb_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_in_google_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sign_in_google_button"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/check_conditions_and_terms"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_margin="@dimen/lg_margin"
                app:layout_constraintTop_toBottomOf="@id/sign_in_buttons"
                app:layout_constraintBottom_toTopOf="@id/button_create_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/conditions_and_terms">
            </CheckBox>
            <Button
                android:id="@+id/button_create_account"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/colorLightBlue"
                android:text="@string/create_and_support"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/xxl_margin"
                android:autoSizeTextType="uniform"
                android:autoSizeStepGranularity="3sp"
                android:padding="@dimen/lg_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"></Button>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>