<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_margin"
        android:layout_marginBottom="@dimen/xl_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider">
        <ImageView
            android:id="@+id/logo_splash"
            android:layout_width="@dimen/login_icon_width"
            android:layout_height="@dimen/login_icon_height"
            android:contentDescription="@string/app_name"
            android:transitionName="logoTransition"
            app:srcCompat="@drawable/logo_ow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:targetApi="lollipop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xxl_margin"
        android:layout_marginRight="@dimen/xxl_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_container"
        app:layout_constraintBottom_toTopOf="@id/home_content">
        <View
            android:id="@+id/sign_in_left_divider"
            android:layout_width="120dp"
            android:layout_height="4dp"
            android:background="@color/colorLightBlue"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/sign_in_right_divider"
            android:layout_width="120dp"
            android:layout_height="4dp"
            android:background="@color/colorLightBlue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/xxl_margin"
        android:layout_marginLeft="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/home_text_content"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/xxl_margin"
            android:layout_marginRight="@dimen/xxl_margin"
            android:layout_marginTop="@dimen/xxxl_margin"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/home_text_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxl_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/sign_in_buttons"
                ></TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_buttons"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/xxl_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_title"
                app:layout_constraintBottom_toTopOf="@id/layout_conditions_and_terms">

                <FrameLayout
                    android:id="@+id/login_fb_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/sign_in_facebook_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <Button
                        android:background="@drawable/rounded_shape_fb"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/fb_button"
                        android:onClick="onClickFacebookButton"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#ffffff" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/login_google_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/lg_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/login_fb_button_layout"
                    app:layout_constraintEnd_toStartOf="@id/login_twitter_button_layout">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_google_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <Button
                        android:background="@drawable/rounded_shape_google"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/google_button"
                        android:onClick="onClickGoogleButton"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#ffffff" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/login_twitter_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/login_google_button_layout"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_twitter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <Button
                        android:background="@drawable/rounded_shape_twitter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/twitter_button"
                        android:onClick="onClickTwitterButton"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#ffffff" />
                </FrameLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_conditions_and_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xxl_margin"
                app:layout_constraintTop_toBottomOf="@id/sign_in_buttons"
                app:layout_constraintBottom_toTopOf="@id/button_create_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <CheckBox
                    android:id="@+id/check_conditions_and_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/accept_terms"
                    android:textSize="@dimen/md_text_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/link_conditions_and_terms">
                </CheckBox>

                <TextView
                    android:id="@+id/link_conditions_and_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sm_margin"
                    android:autoLink="all|web"
                    android:text="@string/conditions_and_terms"
                    android:textSize="@dimen/md_text_size"
                    android:textStyle="bold"
                    android:onClick="onClickTermsAndContidions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/check_conditions_and_terms"
                    app:layout_constraintTop_toTopOf="parent"></TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/button_create_account"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/colorLightBlue"
                android:text="@string/create_and_support"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/xxl_margin"
                android:autoSizeTextType="uniform"
                android:autoSizeStepGranularity="3sp"
                android:padding="@dimen/lg_margin"
                android:onClick="onClickCreateAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"></Button>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>